-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
TestOnStackReplacement.java fails with -Xcomp:
Error mixing types: valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2} and valuetype* java/lang/__Value:AnyNull
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:1154
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/src/hotspot/share/opto/type.cpp:1154), pid=8210, tid=8240
# Error: ShouldNotReachHere()
The problem is that we return an exact value type to a __Value Phi:
225 ValueType === _ 224 227 230 233 236 240 244 245 259 [[ 205 ]] #valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2} !jvms: TestOnStackReplacement::test4_body @ bci:6 TestOnStackReplacement::test4 @ bci:22
201 Region === _ 219 [[ 205 203 202 200 ]] !jvms: TestOnStackReplacement::test4 @ bci:22
205 Phi === 201 225 [[ 200 ]] #valuetype* java/lang/__Value:NotNull !jvms: TestOnStackReplacement::test4 @ bci:22
Another issue:
# Internal Error (/oracle/valhalla/src/hotspot/share/opto/callnode.cpp:955), pid=25095, tid=25121
# assert(!do_asserts || projs->catchall_memproj != __null) failed: must be found
Error mixing types: valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2} and valuetype* java/lang/__Value:AnyNull
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:1154
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/src/hotspot/share/opto/type.cpp:1154), pid=8210, tid=8240
# Error: ShouldNotReachHere()
The problem is that we return an exact value type to a __Value Phi:
225 ValueType === _ 224 227 230 233 236 240 244 245 259 [[ 205 ]] #valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2} !jvms: TestOnStackReplacement::test4_body @ bci:6 TestOnStackReplacement::test4 @ bci:22
201 Region === _ 219 [[ 205 203 202 200 ]] !jvms: TestOnStackReplacement::test4 @ bci:22
205 Phi === 201 225 [[ 200 ]] #valuetype* java/lang/__Value:NotNull !jvms: TestOnStackReplacement::test4 @ bci:22
Another issue:
# Internal Error (/oracle/valhalla/src/hotspot/share/opto/callnode.cpp:955), pid=25095, tid=25121
# assert(!do_asserts || projs->catchall_memproj != __null) failed: must be found