8190704: [MVT] TestOnStackReplacement crashes with "Error mixing types"

Reviewed-by: roland